style: refine global ui theming

--- a/insiderweb-backup260825/index.html
+++ b/insiderweb-backup260825/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Insider Bookings</title>
 
+    <!-- Google Fonts: Poppins for a clean, modern look -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- RESET iOS BUTTONS & LINKS -->
     <style>
-      button, a, input, select {
+      button,
+      a,
+      input,
+      select {
         -webkit-appearance: none;
         appearance: none;
         -webkit-tap-highlight-color: transparent;
